methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:6: error: '(' expected but identifier found.
       if estFaceMur==false){
          ^SlugTracking:13: error: illegal start of simple expression
     }
     ^