methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
   while (estSurBiscuit()=false){
     gauche()
     for (a <- 1 to 4){
       if estFaceMur==false){
         avancer(); 
         if (getCouleurSol()!=Color.green){
           reculer()
         }
       droite()
       }
     }
   }
}        

